objects/ASI_CRM_Channel_Manager_Region__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Manager</label>
        <referenceTo>ASI_CRM_Channel_Manager__c</referenceTo>
        <relationshipLabel>Channel Manager Regions</relationshipLabel>
        <relationshipName>Channel_Manager_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Channel Manager Regions</relationshipLabel>
        <relationshipName>Channel_Manager_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Channel Manager Region</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Manager Regions</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Channel_Manager_Region</fullName>
        <active>true</active>
        <label>ASI_CRM_CN_Channel_Manager_Region</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>